[gd_scene load_steps=16 format=3 uid="uid://ced1bka0wqdmh"]

[ext_resource type="Texture2D" uid="uid://cf72negvwa8an" path="res://Images/Cool Circle.png" id="1_bdqdd"]
[ext_resource type="Script" path="res://Code/studying_part.gd" id="1_qioo5"]
[ext_resource type="FontFile" uid="uid://cukojdfm477jb" path="res://Font/Fondness-Eapae.ttf" id="3_ac4pl"]
[ext_resource type="Script" path="res://Code/Flash Card.gd" id="4_nxkjb"]

[sub_resource type="Gradient" id="Gradient_1x154"]
colors = PackedColorArray(0, 0, 0.6, 1, 0, 0, 0.360784, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2p3rm"]
gradient = SubResource("Gradient_1x154")
fill_from = Vector2(0, 0.00458716)

[sub_resource type="Animation" id="Animation_h5pd0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Back Button:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RichTextLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1159, 38)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Select Set:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("VBoxContainer:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_qons2"]
resource_name = "appear"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RichTextLabel:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.1, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Back Button:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.8, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1159, 38), Vector2(628, 38)]
}

[sub_resource type="Animation" id="Animation_fwn8r"]
resource_name = "disappear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Select Set:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Back Button:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RichTextLabel:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.6, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0c014"]
_data = {
"RESET": SubResource("Animation_h5pd0"),
"appear": SubResource("Animation_qons2"),
"disappear": SubResource("Animation_fwn8r")
}

[sub_resource type="Animation" id="Animation_smick"]
resource_name = "Flip"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(358, 210), Vector2(361, 210), Vector2(358, 210)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"flip"
}]
}

[sub_resource type="Animation" id="Animation_ixd12"]
resource_name = "Left"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.5708, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(140, 83), Vector2(358, 210)]
}

[sub_resource type="Animation" id="Animation_5sbxv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(361, 210)]
}

[sub_resource type="Animation" id="Animation_cprao"]
resource_name = "Right"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(581, 87), Vector2(358, 210)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.5708, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hmm7w"]
_data = {
"Flip": SubResource("Animation_smick"),
"Left": SubResource("Animation_ixd12"),
"RESET": SubResource("Animation_5sbxv"),
"Right": SubResource("Animation_cprao")
}

[node name="Studying Part" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qioo5")

[node name="Background" type="Node" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Background"]
z_index = -1
position = Vector2(575.992, 324.007)
rotation = 1.5708
scale = Vector2(10.1252, 17.9997)
texture = SubResource("GradientTexture2D_2p3rm")

[node name="CPUParticles2D" type="CPUParticles2D" parent="Background"]
position = Vector2(1321, 300)
rotation = 3.14159
amount = 4
lifetime = 30.0
preprocess = 20.0
texture = ExtResource("1_bdqdd")
emission_shape = 3
emission_rect_extents = Vector2(1, 300)
spread = 5.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 50.0
scale_amount_min = 0.4
scale_amount_max = 0.4
color = Color(0.137255, 0.0509804, 0.337255, 1)

[node name="Menu Menu" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RichTextLabel" type="RichTextLabel" parent="Menu Menu"]
layout_mode = 0
offset_left = 69.0
offset_top = 52.0
offset_right = 562.0
offset_bottom = 265.0
theme_override_fonts/normal_font = ExtResource("3_ac4pl")
theme_override_font_sizes/normal_font_size = 52
text = "Lets begin your studying. Click a study set to begin."

[node name="VBoxContainer" type="VBoxContainer" parent="Menu Menu"]
layout_mode = 0
offset_left = 1159.0
offset_top = 38.0
offset_right = 1606.0
offset_bottom = 78.0

[node name="Back Button" type="Button" parent="Menu Menu"]
layout_mode = 0
offset_left = 202.0
offset_top = 414.0
offset_right = 294.0
offset_bottom = 470.0
scale = Vector2(1, 0.800001)
theme_override_fonts/font = ExtResource("3_ac4pl")
theme_override_font_sizes/font_size = 45
text = "Go Back"

[node name="Select Set" type="Button" parent="Menu Menu"]
visible = false
layout_mode = 0
offset_left = 158.0
offset_top = 472.0
offset_right = 358.0
offset_bottom = 555.0
scale = Vector2(1, 0.800001)
theme_override_fonts/font = ExtResource("3_ac4pl")
theme_override_font_sizes/font_size = 55
text = "Lock In Set"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Menu Menu"]
libraries = {
"": SubResource("AnimationLibrary_0c014")
}

[node name="Flash Card" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_nxkjb")

[node name="Name" type="Label" parent="Flash Card"]
layout_mode = 0
offset_right = 102.0
offset_bottom = 113.0
theme_override_fonts/font = ExtResource("3_ac4pl")
theme_override_font_sizes/font_size = 80
text = "Name"

[node name="ColorRect" type="ColorRect" parent="Flash Card"]
layout_mode = 0
offset_left = 361.0
offset_top = 210.0
offset_right = 761.0
offset_bottom = 460.0
pivot_offset = Vector2(200, 125)
color = Color(0.364706, 0.364706, 0.364706, 1)

[node name="CenterContainer" type="CenterContainer" parent="Flash Card/ColorRect"]
layout_mode = 0
offset_right = 398.0
offset_bottom = 249.0

[node name="Label" type="Label" parent="Flash Card/ColorRect/CenterContainer"]
layout_mode = 2
text = "testing testing"

[node name="Flip" type="Button" parent="Flash Card/ColorRect"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 400.0
offset_bottom = 250.0

[node name="Right" type="Button" parent="Flash Card"]
layout_mode = 0
offset_left = 766.0
offset_top = 288.0
offset_right = 794.0
offset_bottom = 398.0
theme_override_fonts/font = ExtResource("3_ac4pl")
theme_override_font_sizes/font_size = 75
text = ">"

[node name="Left" type="Button" parent="Flash Card"]
layout_mode = 0
offset_left = 322.0
offset_top = 289.0
offset_right = 351.0
offset_bottom = 399.0
theme_override_fonts/font = ExtResource("3_ac4pl")
theme_override_font_sizes/font_size = 75
text = "<"

[node name="Back" type="Button" parent="Flash Card"]
layout_mode = 0
offset_left = 445.0
offset_top = 476.0
offset_right = 675.0
offset_bottom = 586.0
theme_override_fonts/font = ExtResource("3_ac4pl")
theme_override_font_sizes/font_size = 45
text = "Alright, Im Done!"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Flash Card"]
libraries = {
"": SubResource("AnimationLibrary_hmm7w")
}

[node name="Writing Prompt" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="show_flash_card" from="." to="Flash Card" method="_on_studying_part_show_flash_card"]
[connection signal="pressed" from="Menu Menu/Back Button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Menu Menu/Select Set" to="." method="_on_select_set_pressed"]
[connection signal="pressed" from="Flash Card/ColorRect/Flip" to="Flash Card" method="_on_flip_pressed"]
[connection signal="pressed" from="Flash Card/Right" to="Flash Card" method="_on_right_pressed"]
[connection signal="pressed" from="Flash Card/Left" to="Flash Card" method="_on_left_pressed"]
[connection signal="pressed" from="Flash Card/Back" to="." method="_on_back_button_pressed"]
